Ensure the JSON library works with JDK8.