@@ -186,7 +186,7 @@ public final class EntityHandler {
 
 	private void loadNpcs(String filename) {
 		try {
-			JSONObject object = new JSONObject(Files.readString(Paths.get(filename)));
+			JSONObject object = new JSONObject(new String(Files.readAllBytes(Paths.get(filename))));
 			JSONArray npcDefs = object.getJSONArray(JSONObject.getNames(object)[0]);
 			for (int i = 0; i < npcDefs.length(); i++) {
 				NPCDef def = new NPCDef();
@@ -249,7 +249,7 @@ public final class EntityHandler {
 
 	private void loadItems(String filename) {
 		try {
-			JSONObject object = new JSONObject(Files.readString(Paths.get(filename)));
+			JSONObject object = new JSONObject(new String(Files.readAllBytes(Paths.get(filename))));
 			JSONArray itemDefs = object.getJSONArray(JSONObject.getNames(object)[0]);
 			for (int i = 0; i < itemDefs.length(); i++) {
 				JSONObject item = itemDefs.getJSONObject(i);
